--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.42.0",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   },
